website initial version

--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
-Mangaka - simple and elegant manga reader.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>Mangaka: Elegant and fast manga reader</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href='http://fonts.googleapis.com/css?family=Calligraffitti' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/custom.css">
+
+  <!-- Scripts
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+</head>
+<body>
+
+  <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
+  <div class="section hero">
+    <div class="container">
+      <div class="row">
+        <div class="one-half column">
+          <h1 class="title">Mangaka</h1>
+          <h4 class="hero-heading">Elegant and fast cross-platform manga reader for you computer and smartphone</h4>
+          <a class="button button-primary" href="https://chrome.google.com/webstore/detail/mangaka/icodndckjfoeoopjdocmofbgpcmndnfa">Chrome</a>
+        </div>
+        <div class="one-half column phones">
+          <img class="phone" src="images/iphone.png">
+          <img class="phone" src="images/iphone.png">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="section features">
+    <div class="container">
+      <div class="row">
+        <div class="one-third column feature">
+          <h3 class="feature-heading">Discover</h3>
+          <p class="feature-description">Explore vast catalog, search by name or filter by genre.</p>
+        </div>
+        <div class="one-third column feature">
+          <h3 class="feature-heading">Build library</h3>
+          <p class="feature-description">Add manga to you library and track your reading progress, continue reading where you left last time.</p>
+        </div>
+        <div class="one-third column feature">
+          <h3 class="feature-heading">Read offline</h3>
+          <p class="feature-description">Cache manga and read it offline while you are on the go or without internet connection.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="section get-help">
+    <div class="container">
+      <h3 class="section-heading">Contact &amp; feedback</h3>
+      <a class="button button-primary" href="https://twitter.com/mangaka_app">Our twitter</a>
+    </div>
+  </div>
+
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+</body>
+</html>
