--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="row">
         <div class="one-half column">
           <h1 class="title">Mangaka</h1>
-          <h4 class="hero-heading">Elegant and fast cross-platform manga reader for you computer and smartphone</h4>
+          <h4 class="hero-heading">Elegant and fast cross-platform manga reader for your computer and smartphone</h4>
           <a class="button button-primary" href="https://chrome.google.com/webstore/detail/mangaka/icodndckjfoeoopjdocmofbgpcmndnfa">Chrome</a>
         </div>
         <div class="one-half column phones">
@@ -78,5 +78,9 @@
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
+<!-- share buttons -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-559ebacf590d9f6f" async="async"></script>
+
 </body>
 </html>
