Firefox app link

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <h1 class="title">Mangaka</h1>
           <h4 class="hero-heading">Elegant and fast cross-platform manga reader for your computer and smartphone</h4>
           <a class="button button-primary" href="https://chrome.google.com/webstore/detail/mangaka/icodndckjfoeoopjdocmofbgpcmndnfa">Chrome</a>
+          <a class="button button-primary" href="https://marketplace.firefox.com/app/mangaka/">Firefox OS / Firefox Android</a>
         </div>
         <div class="one-half column phones">
           <img class="phone" src="images/iphone.png">
